style: update clock background to gradient

--- a/SkyClock/index.html
+++ b/SkyClock/index.html
@@ -13,7 +13,8 @@
             margin: 0;
             color: white;
             font-family: 'Arial', sans-serif;
-            transition: background-color 2s; /* 背景変化をゆったりと */
+            transition: background 3s ease; /* background-colorからbackgroundに変更 */
+            background-attachment: fixed;
         }
         #clock {
             font-size: 80px;
