feat: add colorful style to mood log

--- a/QuickMoodLog/index.html
+++ b/QuickMoodLog/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <h1>今の気分は？</h1>
-    <button onclick="addLog('😊 良い感じ')">😊 良い感じ</button>
-    <button onclick="addLog('😐 まあまあ')">😐 まあまあ</button>
-    <button onclick="addLog('😴 疲れ気味')">😴 疲れ気味</button>
+    <button onclick="addLog('😊 良い感じ', '#27ae60')">😊 良い感じ</button>
+    <button onclick="addLog('😐 まあまあ', '#f39c12')">😐 まあまあ</button>
+    <button onclick="addLog('😴 疲れ気味', '#2980b9')">😴 疲れ気味</button>
 
     <ul id="log-list">
         </ul>
