feat: add log counter

--- a/QuickMoodLog/index.html
+++ b/QuickMoodLog/index.html
@@ -15,6 +15,8 @@
     <button onclick="addLog('😐 まあまあ', '#f39c12')">😐 まあまあ</button>
     <button onclick="addLog('😴 疲れ気味', '#2980b9')">😴 疲れ気味</button>
 
+    <p>現在の記録数： <span id="log-count">0</span>件</p>
+
     <hr>
     <button onclick="clearLogs()" style="background-color: #e74c3c; color: white">全ログ削除</button>
     </hr>
