--- a/QuickMoodLog/index.html
+++ b/QuickMoodLog/index.html
@@ -33,6 +33,8 @@
     <button onclick="clearLogs()" style="background-color: #e74c3c; color: white">全ログ削除</button>
     </hr>
 
+    <button onclick="addDateStamp()" style="background-color: #2c3e50; color: white;">今日の日付を挿入</button>
+
     <ul id="log-list">
         </ul>
     
